%%{init: {'theme':'base', 'themeVariables': {'primaryColor':'#D1FAE5','primaryTextColor':'#059669','primaryBorderColor':'#059669','lineColor':'#10B981','secondaryColor':'#D1FAE5','tertiaryColor':'#D1FAE5','fontSize':'16px'}}}%%

erDiagram
    users ||--|| user_budget_settings : "configures"
    users ||--o{ scheduled_reports : "schedules"
    users ||--|| user_preferences : "customizes"
    users ||--|| onboarding_progress : "tracks"

    users {
        bigint id PK
        varchar email UK
        varchar full_name
        timestamp created_at
        timestamp updated_at
    }

    user_budget_settings {
        bigint id PK
        bigint user_id FK "One-to-One"
        decimal warning_threshold "default_75"
        decimal critical_threshold "default_90"
        boolean notifications_enabled
        boolean email_alerts_enabled
        boolean daily_summary_enabled
        timestamp created_at
        timestamp updated_at
    }

    scheduled_reports {
        bigint id PK
        bigint user_id FK
        enum report_type "MONTHLY_YEARLY_CATEGORY"
        enum frequency "DAILY_WEEKLY_MONTHLY"
        enum format "PDF_CSV_BOTH"
        boolean email_delivery
        boolean is_active
        timestamp last_run
        timestamp next_run
        int run_count
        timestamp created_at
        timestamp updated_at
    }

    user_preferences {
        bigint id PK
        bigint user_id FK "One-to-One"
        varchar viewMode "3_preferences"
        boolean emailNotifications
        boolean budgetAlerts
        boolean monthlySummary
        boolean weeklySummary
        timestamp created_at
        timestamp updated_at
    }

    onboarding_progress {
        bigint id PK
        bigint user_id FK "One-to-One"
        int current_step "default_1"
        int steps_completed "default_0"
        boolean step1_completed "4-step_wizard"
        boolean step2_completed
        boolean step3_completed
        boolean step4_completed
        boolean is_completed
        boolean is_skipped
        timestamp completed_at
        timestamp created_at
        timestamp updated_at
    }
